force-app/main/default/objects/POP__c/POP__c.object-meta.xml
<CustomObject>
    <description>O Procedimento Operacional Padrão (POP) é um objeto central para a gestão de processos padronizados, garantindo conformidade, rastreabilidade e controle de versões. Segue um ciclo de vida definido por status imutáveis (Elaboração, Em Aprovação, Vigente), com funcionalidades específicas para:
Criação e Edição:
Inicia em Elaboração, permitindo vinculação de Instruções de Serviço via componente PopIsSearch e objeto auxiliar POP com Instrução de Serviço.
Bloqueia edições durante a aprovação e, quando Vigente, só permite alterações via cópias (novo registro em Elaboração).
Gestão de Versões:
Utiliza a classe PopCriaAtualizacao para criar réplicas atualizadas, preservando o histórico e relacionamentos. documentos, instruções vinculadas.
Processo de Aprovação:
Transições automáticas de status garantem imutabilidade do registro aprovado.
Integridade de Dados:
Relacionamentos muitos-para-muitos com Instruções de Serviço são gerenciados por fluxos automatizados, evitando duplicidadade</description>
    <label>Procedimento Operacional Padrão</label>
    <nameField>
        <label>Título do Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedimentos Operacionais Padrão</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>