force-app/main/default/objects/POP__c/fields/Administrativo__c.field-meta.xml
<CustomField>
    <fullName>Administrativo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrativo</label>
    <type>Checkbox</type>
</CustomField>