force-app/main/default/objects/POP__c/fields/Aplica_o__c.field-meta.xml
<CustomField>
    <fullName>Aplica_o__c</fullName>
    <label>2. Aplicação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>