force-app/main/default/objects/POP__c/fields/Aprovado_por__c.field-meta.xml
<CustomField>
    <fullName>Aprovado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovado por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Procedimentos Operacionais Padrão</relationshipLabel>
    <relationshipName>Procedimentos_Operacionais_Padr_o</relationshipName>
    <type>Lookup</type>
</CustomField>