force-app/main/default/objects/POP__c/fields/Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Aprovador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Procedimentos Operacionais Padrão (Aprovador)</relationshipLabel>
    <relationshipName>Procedimentos_Operacionais_Padr_o1</relationshipName>
    <type>Lookup</type>
</CustomField>