force-app/main/default/objects/POP__c/fields/C_digo__c.field-meta.xml
<CustomField>
    <fullName>C_digo__c</fullName>
    <displayFormat>POP - {0000}</displayFormat>
    <label>Código</label>
    <type>AutoNumber</type>
</CustomField>