force-app/main/default/objects/POP__c/fields/Condi_es_Espec_ficas__c.field-meta.xml
<CustomField>
    <fullName>Condi_es_Espec_ficas__c</fullName>
    <label>6.Condições Específicas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>