force-app/main/default/objects/POP__c/fields/Condi_es_Gerais__c.field-meta.xml
<CustomField>
    <fullName>Condi_es_Gerais__c</fullName>
    <label>5.Condições Gerais</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>