force-app/main/default/objects/POP__c/fields/Data_Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Data_Aprovador__c</fullName>
    <inlineHelpText>Data de quando o aprovador (Daniel) aprovou.</inlineHelpText>
    <label>Data Aprovador</label>
    <type>DateTime</type>
</CustomField>