force-app/main/default/objects/POP__c/fields/Defini_es__c.field-meta.xml
<CustomField>
    <fullName>Defini_es__c</fullName>
    <label>3.Definições</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>