force-app/main/default/objects/POP__c/fields/Departamentos_que_possuem_c_pias__c.field-meta.xml
<CustomField>
    <fullName>Departamentos_que_possuem_c_pias__c</fullName>
    <label>Departamentos que possuem cópias</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRH</fullName>
            </value>
            <value>
                <fullName>CMP</fullName>
            </value>
            <value>
                <fullName>EST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>