force-app/main/default/objects/POP__c/fields/Desenvolvimento__c.field-meta.xml
<CustomField>
    <fullName>Desenvolvimento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desenvolvimento</label>
    <type>Checkbox</type>
</CustomField>