force-app/main/default/objects/POP__c/fields/Direitos_de_reprodu_o__c.field-meta.xml
<CustomField>
    <fullName>Direitos_de_reprodu_o__c</fullName>
    <label>Direitos de reprodução</label>
    <type>TextArea</type>
</CustomField>