force-app/main/default/objects/POP__c/fields/Elaborador__c.field-meta.xml
<CustomField>
    <fullName>Elaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elaborador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Procedimentos_Operacionais_Padr_o</relationshipName>
    <type>Lookup</type>
</CustomField>