force-app/main/default/objects/POP__c/fields/Empresas__c.field-meta.xml
<CustomField>
    <fullName>Empresas__c</fullName>
    <label>Empresas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HEALTH_SOLUTION</fullName>
                <label>HEALTH SOLUTION</label>
            </value>
            <value>
                <fullName>HOSPCOM</fullName>
            </value>
            <value>
                <fullName>HOSPCOM2-DF</fullName>
                <label>HOSPCOM-DF</label>
            </value>
            <value>
                <fullName>HOSPCOM-153</fullName>
            </value>
            <value>
                <fullName>HOSPCOM-MT</fullName>
            </value>
            <value>
                <fullName>HOSPCOM-SP</fullName>
            </value>
            <value>
                <fullName>ABC-TO</fullName>
            </value>
            <value>
                <fullName>GDB</fullName>
            </value>
            <value>
                <fullName>GESTCOM</fullName>
            </value>
            <value>
                <fullName>ABC-GO</fullName>
                <isActive>false</isActive>
                <label>ABC-GO</label>
            </value>
            <value>
                <fullName>ABC-MT</fullName>
                <isActive>false</isActive>
                <label>ABC-MT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>