force-app/main/default/objects/POP__c/fields/Equipamentos_e_Softwares__c.field-meta.xml
<CustomField>
    <fullName>Equipamentos_e_Softwares__c</fullName>
    <label>4.Equipamentos e Softwares</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>