force-app/main/default/objects/POP__c/fields/Formul_rios_Anexos_e_Documentos__c.field-meta.xml
<CustomField>
    <fullName>Formul_rios_Anexos_e_Documentos__c</fullName>
    <label>8.Formulários, Anexos e Documentos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>