force-app/main/default/objects/POP__c/fields/Instru_o_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Instru_o_de_Servi_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>9.Instrução de Serviço</label>
    <referenceTo>P_O_P_com_Instru_o_de_Servi_o__c</referenceTo>
    <relationshipLabel>Procedimentos Operacionais Padrão</relationshipLabel>
    <relationshipName>Procedimentos_Operacionais_Padr_o</relationshipName>
    <type>Lookup</type>
</CustomField>