force-app/main/default/objects/POP__c/fields/L_M_D__c.field-meta.xml
<CustomField>
    <fullName>L_M_D__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L.M.D</label>
    <referenceTo>L_M_D__c</referenceTo>
    <relationshipLabel>Procedimentos Operacionais Padrão</relationshipLabel>
    <relationshipName>Procedimentos_Operacionais_Padr_o</relationshipName>
    <type>Lookup</type>
</CustomField>