force-app/main/default/objects/POP__c/fields/N_da_Revis_o__c.field-meta.xml
<CustomField>
    <fullName>N_da_Revis_o__c</fullName>
    <label>Nº da Revisão</label>
    <length>50</length>
    <type>Text</type>
</CustomField>