force-app/main/default/objects/POP__c/fields/N_o_aplic_vel__c.field-meta.xml
<CustomField>
    <fullName>N_o_aplic_vel__c</fullName>
    <label>Não aplicável</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>