force-app/main/default/objects/POP__c/fields/Natureza_da_Altera_o__c.field-meta.xml
<CustomField>
    <fullName>Natureza_da_Altera_o__c</fullName>
    <label>Natureza da Alteração</label>
    <type>TextArea</type>
</CustomField>