force-app/main/default/objects/POP__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <label>1.Objetivo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>