force-app/main/default/objects/POP__c/fields/Observa_o_Revis_o__c.field-meta.xml
<CustomField>
    <fullName>Observa_o_Revis_o__c</fullName>
    <label>Observação (Revisão)</label>
    <type>TextArea</type>
</CustomField>