force-app/main/default/objects/POP__c/fields/Procedimento_Operacional_Padr_o__c.field-meta.xml
<CustomField>
    <fullName>Procedimento_Operacional_Padr_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedimento Operacional Padrão</label>
    <referenceTo>POP__c</referenceTo>
    <relationshipLabel>Procedimentos Operacionais Padrão</relationshipLabel>
    <relationshipName>Procedimentos_Operacionais_Padr_o</relationshipName>
    <type>Lookup</type>
</CustomField>