force-app/main/default/objects/POP__c/fields/Qualidade__c.field-meta.xml
<CustomField>
    <fullName>Qualidade__c</fullName>
    <label>Qualidade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>