force-app/main/default/objects/POP__c/fields/Qualidades__c.field-meta.xml
<CustomField>
    <fullName>Qualidades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualidade</label>
    <type>Checkbox</type>
</CustomField>