force-app/main/default/objects/POP__c/fields/rea_do_Procedimento__c.field-meta.xml
<CustomField>
    <fullName>rea_do_Procedimento__c</fullName>
    <label>Área do Procedimento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>