force-app/main/default/objects/POP__c/fields/Responsabilidade_e_Autoridade__c.field-meta.xml
<CustomField>
    <fullName>Responsabilidade_e_Autoridade__c</fullName>
    <label>7.Responsabilidade e Autoridade</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>