force-app/main/default/objects/POP__c/fields/Revisor__c.field-meta.xml
<CustomField>
    <fullName>Revisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Procedimentos_Operacionais_Padr_o1</relationshipName>
    <type>Lookup</type>
</CustomField>