force-app/main/default/objects/POP__c/fields/T_tulo_do_Documento__c.field-meta.xml
<CustomField>
    <fullName>T_tulo_do_Documento__c</fullName>
    <label>Título do Documento</label>
    <type>TextArea</type>
</CustomField>