force-app/main/default/objects/POP__c/fields/Usu_rio__c.field-meta.xml
<CustomField>
    <fullName>Usu_rio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Procedimentos_Operacionais_Padr_o2</relationshipName>
    <type>Lookup</type>
</CustomField>